--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -5,7 +5,7 @@ deployment:
     - /bin/cp -R * $DEPLOYPATH
     - cd $DEPLOYPATH
     - /opt/cpanel/composer/bin/composer install --no-dev --optimize-autoloader
-    - /opt/cpanel/ea-php82/root/usr/bin/php artisan migrate --force
-    - /opt/cpanel/ea-php82/root/usr/bin/php artisan config:cache
-    - /opt/cpanel/ea-php82/root/usr/bin/php artisan route:cache
-    - /opt/cpanel/ea-php82/root/usr/bin/php artisan view:cache
+    - /usr/local/bin/php artisan migrate --force
+    - /usr/local/bin/php artisan config:cache
+    - /usr/local/bin/php artisan route:cache
+    - /usr/local/bin/php artisan view:cache
